--- a/.github/workflows/_main.yml
+++ b/.github/workflows/_main.yml
@@ -1,27 +1,27 @@
-name: Ruby
+# name: Ruby
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-  pull_request:
+#   pull_request:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
-    strategy:
-      matrix:
-        ruby:
-          - '3.1.2'
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     name: Ruby ${{ matrix.ruby }}
+#     strategy:
+#       matrix:
+#         ruby:
+#           - '3.1.2'
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
-    - name: Run the default task
-      run: bundle exec rake
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up Ruby
+#       uses: ruby/setup-ruby@v1
+#       with:
+#         ruby-version: ${{ matrix.ruby }}
+#         bundler-cache: true
+#     - name: Run the default task
+#       run: bundle exec rake
